@@ -1,3 +1,12 @@
+2008-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* src/jlib.erl (timestamp_to_xml): Create an #xmlel element, not an
+	old #xmlelement.
+
+	* src/mod_offline.erl: Remove any compatibility code: the core of
+	Ejabberd expects new structures. Add table conversion. Add try/catch
+	block around exmpp_stringprep:*prep/1 uses.
+
 2008-09-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/mod_vcard.erl (process_sm_iq): Fix a bug where a badmatch
